syntax = "proto3";

package smartcore.bos.gentrait.historypb;

option go_package = "github.com/vanti-dev/sc-bos/pkg/gentrait/historypb";

message PageToken {
  string record_id = 1;
  int32 total_size = 2;
}
